<resources>
    <string name="app_name">Android</string>
    <string name="version">Version</string>
    <string name="imei">IMEI</string>
    <string name="close">close</string>
    <string name="ok">Ok</string>
    <string name="url">URL</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="profileImage">ProfileImage</string>
    <string name="cacheRepository">CacheRepository</string>
    <string name="profileEditImage">ProfileEditImage</string>
    <string name="profileEditInfo">ProfileEditInfo</string>
    <string name="selectPicture">Select Picture</string>
    <string name="registration">Registration</string>
    <string name="explanation">The application requests permission to access your functions to show your IMEI.</string>
    <string name="home_fragment">Home</string>
    <string name="profile_fragment">Profile</string>
    <string name="title_activity_main">Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registration_error">Email should not be blank and passwords must be equal</string>
    <string name="auth_error_message">Some error occurred.</string>
    <string name="profile_edit_error_message">Some error occurred.</string>
    <string name="profile_edit_select_from_gallery">Select photo from gallery</string>
    <string name="profile_edit_capture_from_camera">Capture photo from camera</string>
    <string name="profile_edit_select_action">Select action</string>
    <string name="profile_show_error_message">Some error occurred.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rss_web_view">RssWebViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_rss_fragment">Rss</string>
    <string name="rss_input_dialog_source_example">http://rss.nytimes.com</string>
    <string name="rss_feed_loading_error_message">Loading failed.</string>
    <string name="rss_feed_incorrect_url">Incorrect RssFeed link</string>
    <string name="rss_feed_connection_error">No internet connection</string>
    <string name="rss_feed_preferences_last_userId">Last user id</string>
    <string name="rss_feed_preferences_rssUrl">Rss url</string>
    <string name="rss_feed_welcome">Welcome to rss!</string>
    <string name="rss_feed_success_load_from_cache">Feed loaded from cache</string>
    <string name="rss_feed_correct_url_request">You need to specify correct rss feed link</string>
    <string name="rss_feed_success_load_from_internet">Feed loaded from internet</string>
    <string name="rss_feed_loading">Loading...</string>
    <string name="rss_feed_menu_change_source">Change rss source</string>
    <string name="profile_edit_button_save">Save</string>
    <string name="profile_button_edit">Edit</string>
    <string name="profile_button_logout">Logout</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_full_name">Full name</string>
    <string name="profile_email">Email</string>
    <string name="registration_error_email">Error email</string>
    <string name="registration_error_password">Error password</string>
    <string name="registration_error_password_confirm">Error password confirm</string>
    <string name="youre_about_to_loose_changes">You\'re about to loose unsaved changes!</string>
</resources>
